Stable versions
---------------

4.3.2 ():
	Fix bugs caught in the OpenMPT test cases:
	- fix XM portamento target reset on new instrument
	- fix XM portamento with offset
	- fix XM pan slide memory
	- fix XM tremolo and vibrato waveforms
	- fix tremolo rate
	Other changes:
	- fix IT portamento after keyoff and note end
	- fix IT fadeout reset on new note
	- fix MOD/XM volume up+down priority (reported by Jason Gibson)
	- fix set sample offset effect (by Dennis Lindroos)
	- add emulation of the FT2 pattern loop bug (by Eugene Toder)
	- allow loading of packed formats from memory
	- allow loading of OpenMPT MOD files with large samples
	- code cleanup

4.3.1 (20141111):
	Fix bugs caught in the OpenMPT test cases:
	- fix IT filter envelope range
	- fix IT envelope carry after envelope end
	- fix XM note off with volume command
	- fix XM K00 effect handling
	- fix XM portamento with volume column portamento
	- fix XM keyoff with instrument
	- fix XM note limits
	Fix bugs reported by Andreas Argirakis:
	- fix MOD false positive for UNIC Tracker modules
	- fix EMOD instrument finetune 
	- fix UNIC Tracker instrument finetune test
	- fix NoisePacker1 loader
	Other changes:
	- fix IT tone portamento in first note (reported by Jan Engelhardt)
	- fix XM invalid memory access in event reader
	- fix STM empty note event read
	- fix ABK loader test in Win32
	- fix MOD period range enforcing (reported by Jason Gibson)
	- fix ST2.6 speed effect (reported by Saga Musix)
	- fix corner case memory leak in S3M loader
	- fix retrig of single-shot samples after the end of the sample
	- fix crash in envelope reset with invalid instrument
	- fix module titles and instrument names in Mac OS X
	- fix row delay initialization on new module
	- refactor depacking code
	- code cleanup

4.3.0 (20140926):
	Fix bugs reported by Sami Jumppanen:
	- fix MED4 instrument numbering
	- fix MED effect FFF (turn note off)
	- fix MED synth finetune effect
	Fix bugs reported by Alexander Null: