@@ -7,6 +7,7 @@ Stable versions
 	- fix XM portamento with offset
 	- fix XM pan slide memory
 	- fix XM tremolo and vibrato waveforms
+	- fix MOD pattern break with pattern delay
 	- fix tremolo rate
 	Other changes:
 	- fix IT portamento after keyoff and note end
